--- a/.github/workflows/secretlint.yml
+++ b/.github/workflows/secretlint.yml
@@ -10,6 +10,10 @@ on:
 permissions:
   contents: read
 
+concurrency:
+  group: ${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   secretlint:
     name: "🧹 Secretlint"
