do not persist credentials

--- a/.github/workflows/secretlint.yml
+++ b/.github/workflows/secretlint.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: "☁️ checkout repository"
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: "🔧 Setup NODE/NPM"
         uses: actions/setup-node@v4
