--- a/.github/workflows/secretlint.yml
+++ b/.github/workflows/secretlint.yml
@@ -1,4 +1,4 @@
-name: secretlint
+name: linting
 
 on:
   workflow_dispatch:
@@ -10,6 +10,10 @@ on:
 permissions:
   contents: read
 
+concurrency:
+  group: ${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   secretlint:
     name: "🧹 Secretlint"
@@ -17,6 +21,8 @@ jobs:
     steps:
       - name: "☁️ checkout repository"
         uses: actions/checkout@v4
+        with:
+          persist-credentials: false
 
       - name: "🔧 Setup NODE/NPM"
         uses: actions/setup-node@v4
