--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,3 +13,8 @@ updates:
   schedule:
     interval: weekly
   open-pull-requests-limit: 10
+  groups:
+    vitest-packages:
+      patterns:
+        - "secretlint"
+        - "@secretlint/secretlint-rule-preset-recommend"
